@@ -1,3 +1,8 @@
+2014-03-05  Carl Hetherington  <cth@carlh.net>
+
+	* Bump maximum audio channels to 12 so that we can
+	(crudely at least) get BsL/BsR.
+
 2014-03-04  Carl Hetherington  <cth@carlh.net>
 
 	* Version 1.64.18 released.
